[package]
name = "whirlpool-stream-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Command line parsing
clap = { version = "4.4.11", features = ["derive"] }

# Async
tokio = { version = "1.14.1", features = ["full"] }
futures-util = "0.3.30"

# Websocket
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }

# Serde
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = { version = "1.0.107", features = ["preserve_order"] }

# Whirlpool
whirlpool-archived-data = { git = "https://github.com/yugure-orca/whirlpool-archived-data", tag = "v0.3.0" }
url = "2.5.4"
thiserror = "2.0.11"
