[package]
name = "whirlpool-stream-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Utils
thiserror = "2.0.11"

# Async
tokio = { version = "1.14.1", features = ["full"] }
futures-util = "0.3.30"

# Websocket
url = "2.5.4"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }

# Serde
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
